updated nightmode border color, toolbar flush no correctly aligns elements

--- a/src/components/Toolbar/Toolbar.less
+++ b/src/components/Toolbar/Toolbar.less
@@ -228,6 +228,7 @@
 .r-Toolbar.flush.horizontal > .r-Dropdown >.r-Button:last-child{
   border-top-right-radius:@default-border-radius;
   border-bottom-right-radius:@default-border-radius;
+  margin-right: 0;
   // border-right:1px solid @standard-border;
 }
 
@@ -294,7 +295,7 @@
 
 .r-Toolbar.large > .r-Button{
   padding: 10px 2pc;
-  height: auto;
+  height: 39px;
   font-size:18px;
 }
 
@@ -305,11 +306,6 @@
   // font-size:10px;
   font-weight: normal;
   min-height:26px;
-}
-
-.r-Toolbar.large > .r-Button{
-  padding: 10px 2pc;
-  height: auto;
 }
 
 .r-Toolbar.xlarge > .r-Button{
