--- a/src/less/Recoil.less
+++ b/src/less/Recoil.less
@@ -1968,7 +1968,7 @@ hr {
 		color: #999;
 	}
 	.border-top, .border-bottom, .border-left, .border-right {
-		border-color: #334;
+		border-color: #20262e;
 	}
 	/*.r-Button:hover, .r-Button:focus {
 		background: transparent !important;
